--- a/kopishop/src/App.css
+++ b/kopishop/src/App.css
@@ -1,33 +1,37 @@
-@import '~antd/dist/antd.css';
-
 .App {
   text-align: center;
+  width: 100% ;
+}
+
+.App:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
 .App-logo {
-  height: 40vmin;
+  /*animation: App-logo-spin infinite 20s linear;*/
+  /*height: 40vmin;*/
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  text-align: left;
 }
 
 .App-header {
-  background-color: #18181a;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  background-color: #dee3da;
+  height: 100vh;
+  /* display: flex; */
+  /*flex-direction: column;*/
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  /*color: white;*/
 }
 
+h3{
+  color: #ff5910;
+}
 .App-link {
-  color: #fb9261;
+  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
@@ -39,49 +43,30 @@
   }
 }
 
-.site-layout-content {
-  background: #fff;
-  padding: 24px;
-  min-height: 280px;
+.row{
 }
 
-#components-layout-demo-top .logo {
-  width: 120px;
-  height: 31px;
-  background: rgba(255, 255, 255, 0.2);
-  margin: 16px 24px 16px 0;
+/* .column {
   float: left;
-}
-
-.ant-layout-header {
-  background: rgb(255, 255, 255);
-}
-
-.ant-menu-horizontal {
-  height: 64px;
-  line-height: 64px;
-}
-
-.ant-menu-item {
-  padding: 0 17px 0 17px;
-}
-
-.ant-carousel .slick-dots li button {
-  height: 6px !important;
-}
-
-button {
-  margin: 5px
-}
-
-.webText {
-  color: #000000
-}
-
-.normalRow {
-  padding: 10px;
-}
-
-.normalCol {
+  width: 24%;
+  height: 450px;
   text-align: center;
+  border : 1px solid gray;
+  margin-right: 5px;
+  margin-top: 5px;
+  background-color: #ffffff;
+} */
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+  }
 }
